poprawa BEM i komentarzy z footer

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               </ul>
             </nav>
           </div>
-          <!------- PUSTY DIV ??? ------->
+
           <div class="mobile-hide">
             <ul class="list page-header__right-section">
               <li class="page-header__contact">
@@ -188,7 +188,6 @@
           <ul class="list team__list">
             <li class="team_labels">
               <figure class="team__box">
-                <!-- <img src="images/team/John_Doe_1.jpg" alt="John Dow 1" class="team__img" /> -->
                 <img
                   src="images/team/John1_desktop@1x.jpg"
                   srcset="
@@ -209,28 +208,28 @@
                   <ul class="list team__social-networks">
                     <li>
                       <a href="#" class="social-icon">
-                        <svg width="20" height="20" class="social-icon_icon">
+                        <svg width="20" height="20" class="social-icon__icon">
                           <use href="images/icons.svg#icon-instagram"></use>
                         </svg>
                       </a>
                     </li>
                     <li>
                       <a href="#" class="social-icon">
-                        <svg width="20" height="20" class="social-icon_icon">
+                        <svg width="20" height="20" class="social-icon__icon">
                           <use href="images/icons.svg#icon-twitter"></use>
                         </svg>
                       </a>
                     </li>
                     <li>
                       <a href="#" class="social-icon">
-                        <svg width="20" height="20" class="social-icon_icon">
+                        <svg width="20" height="20" class="social-icon__icon">
                           <use href="images/icons.svg#icon-facebook"></use>
                         </svg>
                       </a>
                     </li>
                     <li>
                       <a href="#" class="social-icon">
-                        <svg width="20" height="20" class="social-icon_icon">
+                        <svg width="20" height="20" class="social-icon__icon">
                           <use href="images/icons.svg#icon-linkedin"></use>
                         </svg>
                       </a>
@@ -241,7 +240,6 @@
             </li>
             <li class="team_labels">
               <figure class="team__box">
-                <!-- <img src="images/team/John_Doe_2.jpg" alt="John Dow 2" class="team__img" /> -->
                 <img
                   src="images/team/John2_desktop@1x.jpg"
                   srcset="
@@ -262,28 +260,28 @@
                   <ul class="list team__social-networks">
                     <li>
                       <a href="#" class="social-icon">
-                        <svg width="20" height="20" class="social-icon_icon">
+                        <svg width="20" height="20" class="social-icon__icon">
                           <use href="images/icons.svg#icon-instagram"></use>
                         </svg>
                       </a>
                     </li>
                     <li>
                       <a href="#" class="social-icon">
-                        <svg width="20" height="20" class="social-icon_icon">
+                        <svg width="20" height="20" class="social-icon__icon">
                           <use href="images/icons.svg#icon-twitter"></use>
                         </svg>
                       </a>
                     </li>
                     <li>
                       <a href="#" class="social-icon">
-                        <svg width="20" height="20" class="social-icon_icon">
+                        <svg width="20" height="20" class="social-icon__icon">
                           <use href="images/icons.svg#icon-facebook"></use>
                         </svg>
                       </a>
                     </li>
                     <li>
                       <a href="#" class="social-icon">
-                        <svg width="20" height="20" class="social-icon_icon">
+                        <svg width="20" height="20" class="social-icon__icon">
                           <use href="images/icons.svg#icon-linkedin"></use>
                         </svg>
                       </a>
@@ -294,8 +292,6 @@
             </li>
             <li class="team_labels">
               <figure class="team__box">
-                <!-- <img src="images/team/John_Doe_3.jpg" alt="John Dow 3" class="team__img" /> -->
-
                 <img
                   src="images/team/John3_desktop@1x.jpg"
                   srcset="
@@ -316,28 +312,28 @@
                   <ul class="list team__social-networks">
                     <li>
                       <a href="#" class="social-icon">
-                        <svg width="20" height="20" class="social-icon_icon">
+                        <svg width="20" height="20" class="social-icon__icon">
                           <use href="images/icons.svg#icon-instagram"></use>
                         </svg>
                       </a>
                     </li>
                     <li>
                       <a href="#" class="social-icon">
-                        <svg width="20" height="20" class="social-icon_icon">
+                        <svg width="20" height="20" class="social-icon__icon">
                           <use href="images/icons.svg#icon-twitter"></use>
                         </svg>
                       </a>
                     </li>
                     <li>
                       <a href="#" class="social-icon">
-                        <svg width="20" height="20" class="social-icon_icon">
+                        <svg width="20" height="20" class="social-icon__icon">
                           <use href="images/icons.svg#icon-facebook"></use>
                         </svg>
                       </a>
                     </li>
                     <li>
                       <a href="#" class="social-icon">
-                        <svg width="20" height="20" class="social-icon_icon">
+                        <svg width="20" height="20" class="social-icon__icon">
                           <use href="images/icons.svg#icon-linkedin"></use>
                         </svg>
                       </a>
@@ -348,7 +344,6 @@
             </li>
             <li class="team_labels">
               <figure class="team__box">
-                <!-- <img src="images/team/John_Doe_4.jpg" alt="John Dow 4" class="team__img" /> -->
                 <img
                   src="images/team/John4_desktop@1x.jpg"
                   srcset="
@@ -369,28 +364,28 @@
                   <ul class="list team__social-networks">
                     <li>
                       <a href="#" class="social-icon">
-                        <svg width="20" height="20" class="social-icon_icon">
+                        <svg width="20" height="20" class="social-icon__icon">
                           <use href="images/icons.svg#icon-instagram"></use>
                         </svg>
                       </a>
                     </li>
                     <li>
                       <a href="#" class="social-icon">
-                        <svg width="20" height="20" class="social-icon_icon">
+                        <svg width="20" height="20" class="social-icon__icon">
                           <use href="images/icons.svg#icon-twitter"></use>
                         </svg>
                       </a>
                     </li>
                     <li>
                       <a href="#" class="social-icon">
-                        <svg width="20" height="20" class="social-icon_icon">
+                        <svg width="20" height="20" class="social-icon__icon">
                           <use href="images/icons.svg#icon-facebook"></use>
                         </svg>
                       </a>
                     </li>
                     <li>
                       <a href="#" class="social-icon">
-                        <svg width="20" height="20" class="social-icon_icon">
+                        <svg width="20" height="20" class="social-icon__icon">
                           <use href="images/icons.svg#icon-linkedin"></use>
                         </svg>
                       </a>
